--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ repositories {
 dependencies {
     implementation 'org.springframework:spring-core:5.3.15'
     implementation 'org.springframework:spring-context:5.3.15'
+    implementation 'jakarta.annotation:jakarta.annotation-api:1.3.5'
+
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
