enabled Logging Starter and added Logback Configuration

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,3 +20,11 @@ db:
       timeout: 3
 
 spring.profiles.active: qa
+
+logging:
+  level:
+    root: WARN
+    com.spring.database.pool: INFO
+  file:
+    name: com.log
+    path: /
