--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,10 +20,20 @@ db:
       timeout: 3
 
 spring.profiles.active: qa
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5433/postgres
+    username: postgres
+    password: pass
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    properties.hibernate:
+      show_sql: true
+      format_sql: true
 
 logging:
   level:
-    root: WARN
+    root: INFO
     com.spring.database.pool: INFO
   file:
     name: com.log
